# NeuralNetwork-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: run_tests.yml
bench/: CMakeLists.txt  bench_helpers.hpp  layer_bench.cpp  system_bench.cpp  utils_bench.cpp
coverage/: coverage.Accuracy.cpp.92df4b72c791f49d7ccd1ed3e585eaa7.html  coverage.Activations.cpp.693c614c12816c64b3e64be953b95ff4.html  coverage.Layer.cpp.b0ebe8b59d53f188d800b95c2203f2b2.html  coverage.Loss.cpp.1dea9fac47aa45c3cf31820261ce54e9.html  coverage.LossActivation.cpp.889e8f3d3b258d2a604ccd70077bf391.html  coverage.MnistSample.cpp.315df49dc4a0fd5f862288a87c0e50db.html  coverage.Model.cpp.64313e713a8d855fc38218d95d4800e2.html  coverage.ModelLayer.cpp.4fa5df6a42b860aca916c91e28e33644.html  coverage.Optimizers.cpp.56a7d8c166fa20dfaa3861eea16359a3.html  coverage.basic_test.cpp.cccb4417cfd4729bb2c1eb73e25a9062.html  coverage.functions.html  coverage.html  coverage.layer_bench.cpp.8fbcda298418dec752827e8a361072e7.html  coverage.layer_integration_tests.cpp.b3cec6dac3adce0b4eb6d0ae4b0af96a.html  coverage.layer_unit_tests.cpp.18f2b52a36f1946532b1d589bf39aa26.html  coverage.system_bench.cpp.a56603f9ccfad23f243053b53f796412.html  coverage.test_all.cpp.50f40a8f2087231cc24406e3d6f2c11b.html  coverage.utils.cpp.837e477918d3090758ac5bc98978bedc.html  coverage.utils_bench.cpp.bf6838a532e9b57f5637d9270ae017fd.html  coverage.utils_integration_tests.cpp.faaca72d0d11d9ba254d9007903b255d.html  coverage.utils_unit_tests.cpp.759408af24d641cd937cc11d51175bd0.html  coverage.xml
nn-cpp/: Accuracy.cpp  Accuracy.hpp  Activations.cpp  Activations.hpp  CMakeLists.txt  Layer.cpp  Layer.hpp  Loss.cpp  Loss.hpp  LossActivation.cpp  LossActivation.hpp  Model.cpp  Model.hpp  ModelLayer.hpp  Optimizers.cpp  Optimizers.hpp  utils.cpp  utils.hpp
sample/: CMakeLists.txt  MnistSample.cpp
src/: Accuracy.cpp  Accuracy.hpp  Activations.cpp  Activations.hpp  Layer.cpp  Layer.hpp  Loss.cpp  Loss.hpp  LossActivation.cpp  LossActivation.hpp  Model.cpp  Model.hpp  ModelLayer.cpp  ModelLayer.hpp  Optimizers.cpp  Optimizers.hpp  TestData.hpp  Vec2d.cpp  Vec2d.hpp  main.cpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  basic_test.cpp  layer_integration_tests.cpp  layer_unit_tests.cpp  system_tests.cpp  test_all.cpp  test_helpers.hpp  utils_integration_tests.cpp  utils_test.cpp  utils_unit_tests.cpp
